--- a/index.html
+++ b/index.html
@@ -17,31 +17,36 @@
 <body>
   <!----------------------------------header------------------------------------------>>
     <header class="header">
-     <nav class="header-nav">
-      <a href="./index.html" class="logo">Web<span class="logo-color">Studio</span></a>
-       <ul class="header-nav-list">
-         <li class="header-nav-list-item"><a href="./index.html" class="header-nav-list-item-link">Studio</a></li>
-         <Li class="header-nav-list-item"><a href="" class="header-nav-list-item-link">Portfolio</a></Li>
-         <Li class="header-nav-list-item"><a href="" class="header-nav-list-item-link">Contacts</a></Li>
-       </ul>
-     </nav>
-     <address class="header-adr">
+     <div class="container box">
+      <nav class="header-nav">
+       <a href="./index.html" class="logo header-logo">Web<span class="logo-color">Studio</span></a>
+        <ul class="header-nav-list">
+          <li class="header-nav-list-item"><a href="./index.html" class="header-nav-list-item-link">Studio</a></li>
+          <Li class="header-nav-list-item"><a href="" class="header-nav-list-item-link">Portfolio</a></Li>
+          <Li class="header-nav-list-item"><a href="" class="header-nav-list-item-link">Contacts</a></Li>
+        </ul>
+      </nav>
+      <address class="header-adr">
         <ul class="header-adr-list">
             <li class="header-adr-list-item"><a href="mailto:info@devstudio.com" class="header-adr-list-link">info@devstudio.com</a></li>
             <li class="header-adr-list-item"><a href="tel:+110001111111" class="header-adr-list-link">+11 (000) 111-11-11</a></li>
         </ul>
      </address>
+    </div>
     </header>
   <!-----------------------------------------main----------------------------------------->>
     <main>
         <section class="hero">
+         <div class="container box">
          <h1 class="hero-text">Effective Solutions for Your Business</h1>
          <button type="button" class="hero-btn">Order Service</button>
+         </div>
         </section>
 
         <section class="text">
+         <div class="container box">
             <h2 class="text-head">Advantages</h2>
-          <ul class="text-items">
+           <ul class="text-items">
             <li class="text-items-list">
               <h3 class="text-subtitle">Strategy</h3>
               <p class="text-desc">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -58,36 +63,40 @@
              <h3 class="text-subtitle">Technologies</h3>
               <p class="text-desc">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
-          </ul>
+           </ul>
+         </div>
         </section>
 
         <section class="team">
-         <h2 class="team-caption">Our Team</h2>
-         <ul class="team-list">
-            <Li class="team-list-people">
+          <div class="container box">
+          <h2 class="team-caption">Our Team</h2>
+            <ul class="team-list">
+             <Li class="team-list-people">
                  <img src="./images/1.jpg" alt="Designer" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Mark Guerrero</h3>
                  <p class="team-title">Product Designer</p> 
-            </Li>
-            <Li class="team-list-people">
+             </Li>
+             <Li class="team-list-people">
                  <img src="./images/2.jpg" alt="Developer" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Tom Ford</h3>
                   <p class="team-title">Frontend Developer</p> 
-            </Li>
-            <Li class="team-list-people">
+             </Li>
+             <Li class="team-list-people">
                  <img src="./images/3.jpg" alt="Marketing" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Camila Garcia</h3>
                  <p class="team-title">Marketing</p> 
-            </Li>
-            <Li class="team-list-people">
+             </Li>
+             <Li class="team-list-people">
                  <img src="./images/4.jpg" alt="Designer" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Daniel Wilson</h3>
                   <p class="team-title">UI Designer</p>
-            </Li>
-         </ul>
+             </Li>
+           </ul>
+         </div>
         </section>
 
         <section class="portfolio">
+         <div class="container box">
           <h2 class="portfolio-caption">Our Portfolio</h2>
           <ul class="portfolio-list">
             <Li class="portfolio-list-item">
@@ -121,12 +130,15 @@
               <p class="portfolio-text">Marketing</p>
             </Li>
           </ul>
+         </div>
         </section>
     </main>
     <!---------------------------------------footer------------------------------------------->>
     <footer class="footer">
+        <div class="container box">
          <a href="./index.html" class="logo-footer">Web<span class="logo-color-footer">Studio</span></a>
          <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
+        </div>
+        </footer>
 </body>
 </html>
