--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li class="header-adr-list-item"><a href="tel:+110001111111" class="header-adr-list-link">+11 (000) 111-11-11</a></li>
         </ul>
      </address>
-    </div>
+     </div>
     </header>
   <!-----------------------------------------main----------------------------------------->>
     <main>
@@ -135,7 +135,7 @@
     </main>
     <!---------------------------------------footer------------------------------------------->>
     <footer class="footer">
-        <div class="container box">
+        <div class="container sectn-box">
          <a href="./index.html" class="logo-footer">Web<span class="logo-color-footer">Studio</span></a>
          <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
