--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-----------------------------------------main----------------------------------------->>
     <main>
         <section class="hero">
-         <div class="container box">
+         <div class="container">
          <h1 class="hero-text">Effective Solutions for Your Business</h1>
          <button type="button" class="hero-btn">Order Service</button>
          </div>
