--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
 
         <section class="text">
-         <div class="container box">
+         <div class="container">
             <h2 class="text-head">Advantages</h2>
            <ul class="text-items">
             <li class="text-items-list">
@@ -68,67 +68,87 @@
         </section>
 
         <section class="team">
-          <div class="container box">
+          <div class="container">
           <h2 class="team-caption">Our Team</h2>
             <ul class="team-list">
-             <Li class="team-list-people">
+             <div class="team-item">
+              <Li class="team-list-people">
                  <img src="./images/1.jpg" alt="Designer" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Mark Guerrero</h3>
                  <p class="team-title">Product Designer</p> 
-             </Li>
-             <Li class="team-list-people">
+              </Li>
+             </div>
+             <div class="team-item">
+              <Li class="team-list-people">
                  <img src="./images/2.jpg" alt="Developer" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Tom Ford</h3>
                   <p class="team-title">Frontend Developer</p> 
-             </Li>
-             <Li class="team-list-people">
+              </Li>
+             </div>
+             <div class="team-item">
+              <Li class="team-list-people">
                  <img src="./images/3.jpg" alt="Marketing" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Camila Garcia</h3>
                  <p class="team-title">Marketing</p> 
-             </Li>
-             <Li class="team-list-people">
+              </Li>
+             </div>
+             <div class="team-item">
+              <Li class="team-list-people">
                  <img src="./images/4.jpg" alt="Designer" width="264" height="260" class="team-img">
                  <h3 class="team-subtitle">Daniel Wilson</h3>
                   <p class="team-title">UI Designer</p>
-             </Li>
+              </Li>
+             </div>
            </ul>
          </div>
         </section>
 
         <section class="portfolio">
-         <div class="container box">
+         <div class="container">
           <h2 class="portfolio-caption">Our Portfolio</h2>
           <ul class="portfolio-list">
+            <div class="portfolio-box">
             <Li class="portfolio-list-item">
               <img src="./images/26.jpg" alt="Banking App" width="360" height="300" class="portfolio-img">
               <h3 class="portfolio-subtitle">Banking App</h3>
               <p class="portfolio-text">App</p>
             </Li>
+            </div>
+            <div class="portfolio-box">
             <Li class="portfolio-list-item">
               <img src="./images/25.jpg" alt="Marketing" width="360" height="300" class="portfolio-img">
               <h3 class="portfolio-subtitle">Cashless Payment</h3>
               <p class="portfolio-text">Marketing</p>
             </Li>
+            </div>
+            <div class="portfolio-box">
             <Li class="portfolio-list-item">
               <img src="./images/24.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img">
               <h3 class="portfolio-subtitle">Meditation App</h3>
               <p class="portfolio-text">App</p>
             </Li>
+            </div>
+            <div class="portfolio-box">
             <Li class="portfolio-list-item">
               <img src="./images/23.jpg" alt="Taxi Servicer" width="360" height="300" class="portfolio-img">
               <h3 class="portfolio-subtitle">Taxi Service</h3>
               <p class="portfolio-text">Marketing</p>
             </Li>
+            </div>
+            <div class="portfolio-box">
             <Li class="portfolio-list-item">
               <img src="./images/22.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-img">
               <h3 class="portfolio-subtitle">Screen Illustrations</h3>
               <p class="portfolio-text">Design</p>
             </Li>
+            </div>
+            <div class="portfolio-box">
             <Li class="portfolio-list-item">
               <img src="./images/21.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img">
               <h3 class="portfolio-subtitle">Online Courses</h3>
               <p class="portfolio-text">Marketing</p>
             </Li>
+            </div>
           </ul>
          </div>
         </section>
