--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <!----------------------------------header------------------------------------------>>
+  <!----------------------------------header------------------------------------------>
     <header class="header">
      <div class="container box">
       <nav class="header-nav">
@@ -34,7 +34,7 @@
      </address>
      </div>
     </header>
-  <!-----------------------------------------main----------------------------------------->>
+  <!-----------------------------------------main----------------------------------------->
     <main>
         <section class="hero">
          <div class="container">
@@ -153,7 +153,7 @@
          </div>
         </section>
     </main>
-    <!---------------------------------------footer------------------------------------------->>
+    <!---------------------------------------footer------------------------------------------->
     <footer class="footer">
         <div class="container sectn-box">
          <a href="./index.html" class="logo-footer">Web<span class="logo-color-footer">Studio</span></a>
